# FedMosaic

./: .gitignore  README.md  README_FLWR.md  coolstrategy  download_data.py  extract_text_embedding.ipynb  full_preprocess_dataset.csv  optuna_modelMLP.txt  pyproject.toml  run_clip.ipynb  test_npy.py
CSV/: labels.csv  test.csv  train.csv
Preprocessed_data/: link.txt  test_df.csv  train_df.csv
embeddings/: biomedica.ipynb  medsig.ipynb  text_embedding.ipynb
embeddings/img_embeddings/: clip_image_embeddings.pt
embeddings/text_embedding/bart_summary/: 10001884_59066712.npy  10009049_55602594.npy  10018081_54070678.npy  10021348_58126648.npy  10021938_54308908.npy  10029874_58053419.npy  10035631_58755270.npy  10039272_56948355.npy  10046922_59373859.npy  10048522_52414596.npy  10062692_55587830.npy  10074323_52846390.npy  10082014_55731615.npy  10088198_58202293.npy  10095982_54052225.npy  10115182_51406842.npy  10116621_50558411.npy  10117273_53559076.npy  10122392_59596554.npy  10124825_58657160.npy  10141364_59076000.npy  10143015_51845274.npy  10145374_52207654.npy  10146782_53881531.npy  10150911_50886636.npy  10171967_57636479.npy  10176514_59083641.npy  10178472_59799535.npy  10180139_55110022.npy  10180204_56817326.npy  10187092_51970604.npy  10188275_56893048.npy  10189427_53450827.npy  10191971_50967429.npy  10192748_51909855.npy  10197435_50897003.npy  10206502_50085097.npy  10207476_59188570.npy  10210153_52879979.npy  10213338_54946591.npy  (+1960 more)
fedmosaic/: __init__.py  client_app.py  server_app.py  task.py
outputs/2025-07-17/09-26-45/: run_config.json
(+474 files in other folders)
