[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedmosaic"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "torch==2.5.1",
    "datasets",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "LeonNascimento"

[tool.flwr.app.components]
serverapp = "fedmosaic.server_app:app"
clientapp = "fedmosaic.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 100
fraction-fit = 1
local-epochs = 1
use-wandb = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
